<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.amirhosseinemadi.bmi.viewModel.ViewModel" />
    </data>

    <androidx.drawerlayout.widget.DrawerLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:id="@+id/drawer">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".view.MainActivity"
            android:orientation="vertical"
            android:background="@color/md_grey_200">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp48"
                android:backgroundTint="@color/md_light_green_A700">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="محاسبه  BMI"
                        android:layout_centerInParent="true"
                        android:textColor="@color/md_white_1000">
                    </androidx.appcompat.widget.AppCompatTextView>


                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            tools:ignore="UselessLeaf">

                        </LinearLayout>


                    </androidx.appcompat.widget.Toolbar>

                </RelativeLayout>



            </androidx.cardview.widget.CardView>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="bottom">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:paddingTop="16dp"
                    android:paddingStart="@dimen/dp16"
                    android:paddingEnd="@dimen/dp16"
                    android:gravity="center">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:cardCornerRadius="@dimen/dp8"
                        android:backgroundTint="@color/md_white_1000">


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                android:id="@+id/lay2"
                                android:visibility="visible"
                                android:gravity="center">


                                <androidx.appcompat.widget.AppCompatTextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/enter_detail"
                                    android:gravity="center"
                                    android:textColor="@color/md_green_A700"
                                    android:textSize="25sp">
                                </androidx.appcompat.widget.AppCompatTextView>

                            </LinearLayout>




                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:orientation="vertical"
                                android:visibility="gone"
                                android:id="@+id/lay">

                                <RelativeLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="@dimen/dp24">

                                    <com.dinuscxj.progressbar.CircleProgressBar
                                        android:layout_width="@dimen/dp128"
                                        android:layout_height="@dimen/dp128"
                                        app:style="line"
                                        app:progress_text_size="@dimen/sp20"
                                        app:progress_text_color="@color/md_white_1000"
                                        app:progress_background_color="@color/md_grey_300"
                                        android:id="@+id/circle_pro"
                                        app:progress_shader="sweep"
                                        app:line_width="@dimen/dp16"
                                        app:progress_start_color="@color/md_red_A700"
                                        app:progress_end_color="@color/md_red_A700"
                                        app:line_count="50">
                                    </com.dinuscxj.progressbar.CircleProgressBar>

                                    <androidx.appcompat.widget.AppCompatTextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_centerInParent="true"
                                        android:textColor="@color/md_light_green_A700"
                                        android:textSize="35sp"
                                        android:id="@+id/txt_bmi"
                                        android:text="@{viewModel.bm}">
                                    </androidx.appcompat.widget.AppCompatTextView>

                                </RelativeLayout>



                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal">


                                    <androidx.appcompat.widget.AppCompatTextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:textSize="@dimen/sp18"
                                        android:text="@{viewModel.status}"
                                        android:textColor="@color/md_green_A700">
                                    </androidx.appcompat.widget.AppCompatTextView>

                                    <androidx.appcompat.widget.AppCompatTextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:textSize="@dimen/sp18"
                                        android:text="@string/status"
                                        android:textColor="@color/md_green_A700">
                                    </androidx.appcompat.widget.AppCompatTextView>

                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal">

                                    <androidx.appcompat.widget.AppCompatTextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:textSize="@dimen/sp18"
                                        android:textColor="@color/md_green_A700"
                                        android:text="@{viewModel.max}">
                                    </androidx.appcompat.widget.AppCompatTextView>

                                    <androidx.appcompat.widget.AppCompatTextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:textSize="@dimen/sp18"
                                        android:text="@string/to"
                                        android:textColor="@color/md_green_A700">
                                    </androidx.appcompat.widget.AppCompatTextView>

                                    <androidx.appcompat.widget.AppCompatTextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:textSize="@dimen/sp18"
                                        android:textColor="@color/md_green_A700"
                                        android:text="@{viewModel.min}">
                                    </androidx.appcompat.widget.AppCompatTextView>


                                    <androidx.appcompat.widget.AppCompatTextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:textSize="@dimen/sp18"
                                        android:text="@string/normal_weight"
                                        android:textColor="@color/md_green_A700">
                                    </androidx.appcompat.widget.AppCompatTextView>


                                </LinearLayout>





                            </LinearLayout>






                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="bottom"
                    android:paddingStart="@dimen/dp16"
                    android:paddingEnd="@dimen/dp16"
                    android:paddingTop="@dimen/dp16"
                    android:paddingBottom="@dimen/dp8">


                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/md_light_green_A700"
                        app:cardCornerRadius="@dimen/dp8">




                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:hintAnimationEnabled="true"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/dp8"
                                android:orientation="vertical">

                                <androidx.appcompat.widget.AppCompatEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="@dimen/dp48"
                                    android:hint="@string/age"
                                    android:text="@={viewModel.age}"
                                    android:id="@+id/edt_age"
                                    android:inputType="number"
                                    android:backgroundTint="@color/md_white_1000"
                                    android:textColorHint="@color/md_white_1000"
                                    android:drawableStart="@drawable/ic_cake"
                                    android:textColor="@color/md_white_1000"
                                    android:gravity="right"
                                    tools:ignore="RtlHardcoded">
                                </androidx.appcompat.widget.AppCompatEditText>

                                <androidx.appcompat.widget.AppCompatEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="@dimen/dp48"
                                    android:hint="@string/weight"
                                    android:text="@={viewModel.weight}"
                                    android:id="@+id/edt_weight"
                                    android:inputType="number"
                                    android:backgroundTint="@color/md_white_1000"
                                    android:textColorHint="@color/md_white_1000"
                                    android:drawableStart="@drawable/ic_weight"
                                    android:textColor="@color/md_white_1000"
                                    android:gravity="right"
                                    tools:ignore="RtlHardcoded">
                                </androidx.appcompat.widget.AppCompatEditText>

                                <androidx.appcompat.widget.AppCompatEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="@dimen/dp48"
                                    android:id="@+id/edt_height"
                                    android:hint="@string/height"
                                    android:text="@={viewModel.height}"
                                    android:inputType="numberDecimal"
                                    android:backgroundTint="@color/md_white_1000"
                                    android:textColorHint="@color/md_white_1000"
                                    android:drawableStart="@drawable/ic_size"
                                    android:textColor="@color/md_white_1000"
                                    android:gravity="right"
                                    tools:ignore="RtlHardcoded">
                                </androidx.appcompat.widget.AppCompatEditText>

                            </LinearLayout>

                        </com.google.android.material.textfield.TextInputLayout>



                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:gravity="center"
                                android:id="@+id/sexuality">

                                <androidx.appcompat.widget.AppCompatCheckBox
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/woman"
                                    android:layout_marginEnd="@dimen/dp56"
                                    android:id="@+id/check_f"
                                    android:checked="@={viewModel.f}"
                                    android:textColor="@color/md_white_1000"
                                    android:backgroundTint="@color/md_white_1000"
                                    android:buttonTint="@color/md_white_1000"
                                    android:enabled="@{viewModel.fs}"
                                    android:onClick="@{(a)->viewModel.fClick()}">
                                </androidx.appcompat.widget.AppCompatCheckBox>

                                <androidx.appcompat.widget.AppCompatCheckBox
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/man"
                                    android:id="@+id/check_m"
                                    android:checked="@={viewModel.m}"
                                    android:textColor="@color/md_white_1000"
                                    android:buttonTint="@color/md_white_1000"
                                    android:enabled="@{viewModel.ms}"
                                    android:onClick="@{(a)->viewModel.mClick()}">
                                </androidx.appcompat.widget.AppCompatCheckBox>

                            </LinearLayout>






                    </androidx.cardview.widget.CardView>



                    <androidx.appcompat.widget.AppCompatButton
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp48"
                        android:text="@string/calculate"
                        android:textSize="@dimen/sp18"
                        android:id="@+id/btn_calculate"
                        android:onClick="@{(a)->viewModel.onClick()}"
                        android:background="@drawable/btn_shape"
                        android:layout_marginTop="@dimen/dp16"
                        android:elevation="0dp"
                        android:textColor="@color/md_white_1000">
                    </androidx.appcompat.widget.AppCompatButton>



                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.navigation.NavigationView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:menu="@menu/menu_main"
            app:headerLayout="@layout/header"
            android:id="@+id/nav">
        </com.google.android.material.navigation.NavigationView>

    </androidx.drawerlayout.widget.DrawerLayout>



</layout>